metric 1.2.0, fix shift index, add prune index test